--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
   </head>
 <body>
-
+  
+    {{> navigation}}
+    {{> body}}
+  
 {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
-{{> body}}
-
 <script src="{{root}}assets/js/app.js"></script>
 </body>
 </html>
